# rct

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/workflows/: build.yml  coverage.yml  lint.yml  rust.yml
examples/: basic.rs  colors_table.rs
rct/: Cargo.toml
rct/examples/: basic.rs  colors_table.rs  struct.rs
rct/src/: cell.rs  lib.rs  row.rs  table.rs
rct/src/styles/: borders.rs  color.rs  mod.rs
rct/tests/: basic_test.rs
rct_derive/: Cargo.toml
rct_derive/src/: fields.rs  lib.rs  table.rs  utils.rs
rct_derive/tests/: struct_tests.rs
rct_tests/: Cargo.toml  Licence
rct_tests/src/: main.rs
rct_tests/tests/: tests.rs
rct_tests/tests/ui/: enum.rs  enum.stderr  error_attribute.rs  struct_named.rs  struct_unit.rs  struct_unit.stderr  struct_unnamed.rs  struct_unnamed.stderr  union.rs  union.stderr
src/: cell.rs  color.rs  lib.rs  main.rs  rct.rs  row.rs  table.rs
src/styles/: borders.rs  color.rs
tests/: basic_test.rs
