[package]
name = "rct"
version = "0.2.1"
edition = "2021"
authors = ["disco07 <koneenok@outlook.fr>"]
description = "CLI Table Output for Rust Project"
keywords = ["CLI", "cli", "Table", "rct"]
categories = ["command-line-interface"]
repository = "https://github.com/disco07/rct"
documentation = "https://docs.rs/rct"
license = "MIT"
include = ["src/**/*.rs", "README.md", "License"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rct"
path = "src/lib.rs"

[dependencies]
unicode-width = "0.1"
strip-ansi-escapes = "0.1.1"
regex = "1.7.1"
rct_derive = { version = "=0.1.0", optional = true, path = "../rct_derive" }

[dev-dependencies]
rct_derive = { version = "0.1.0", path = "../rct_derive" }


[package.metadata.playground]
features = ["derive"]

[package.metadata.docs.rs]
features = ["derive"]
targets = ["x86_64-unknown-linux-gnu"]


########################## FEATURES ####################################

[features]
default = ["derive"]

# Provide derive(Table) macros.
derive = ["rct_derive"]