[package]
name = "rct_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[lib]
name = "rct_derive"
proc-macro = true

[dependencies]
syn = { version = "2.0.5", features = ["extra-traits"] }
quote = "1.0.26"
proc-macro2 = "1.0.53"

[dev-dependencies]
rct = { path = "../rct" }
trybuild = { version = "1.0.49", features = ["diff"] }